back_button_interceptor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   animate_do: ^3.3.4
+  back_button_interceptor: ^8.0.0
   carousel_slider: ^5.0.0
   dio: ^5.7.0
   flutter:
