--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.6.6
   go_router: ^14.4.1
   http: ^1.2.2
+  image_picker: ^1.1.2
   intl: ^0.19.0
   page_transition: ^2.1.0
   simple_animations: ^5.0.2
