--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   page_transition: ^2.1.0
+  pretty_dio_logger: ^1.4.0
   simple_animations: ^5.0.2
 
 dev_dependencies:
