--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.19.0
   page_transition: ^2.1.0
   pretty_dio_logger: ^1.4.0
+  shared_preferences: ^2.3.3
   simple_animations: ^5.0.2
 
 dev_dependencies:
