--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   gap: ^3.0.1
   get: ^4.6.6
   go_router: ^14.4.1
+  grouped_list: ^6.0.0
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
