--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jombang
 description: "A new Flutter project."
 publish_to: "none"
-version: 0.1.0
+version: 2.2.0
 
 environment:
   sdk: ^3.5.3
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
+  liquid_pull_to_refresh: ^3.0.1
   page_transition: ^2.1.0
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.3.3
