--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jombang
 description: "A new Flutter project."
 publish_to: "none"
-version: 2.2.0
+version: 2.2.0+3
 
 environment:
   sdk: ^3.5.3
