--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,10 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
-  mobile_scanner: ^7.1.2
+  mobile_scanner: ^6.0.11
   page_transition: ^2.1.0
   pretty_dio_logger: ^1.4.0
+  qr_scanner_overlay: ^0.0.2
   shared_preferences: ^2.3.3
   simple_animations: ^5.0.2
   url_launcher: ^6.3.2
